// Generated file
import "ccsds_mal/types.proto";
import "pusGroundModel/Pus012MonitoringCheckProperties.proto";
import "pusGroundModel/PusElement.proto";


package pusGroundModel.protobuf;

message Pus012ParameterMonitoringDefinition {
extensions 15 to 115;

  optional ccsds_mal.protobuf.UINTEGER monitoringId = 1;
  optional ccsds_mal.protobuf.UINTEGER parameterId = 2;
  optional ccsds_mal.protobuf.UINTEGER validityParameterId = 3;
  optional ccsds_mal.protobuf.STRING validityParameterMask = 4;
  optional ccsds_mal.protobuf.ATTRIBUTE parameterCurrentValue = 5;
  optional ccsds_mal.protobuf.ATTRIBUTE validityParameterExpectedValue = 6;
  optional ccsds_mal.protobuf.UINTEGER monitoringInterval = 7;
  optional ccsds_mal.protobuf.UINTEGER repetitionNumber = 8;
  optional ccsds_mal.protobuf.UINTEGER checkType = 9;
  optional ccsds_mal.protobuf.UINTEGER monitoringStatus = 10;
  optional pusGroundModel.protobuf.Pus012MonitoringCheckProperties pus012MonitoringCheckPropertiesLow = 11;
  optional pusGroundModel.protobuf.Pus012MonitoringCheckProperties pus012MonitoringCheckPropertiesHigh = 12;
  optional pusGroundModel.protobuf.Pus012MonitoringCheckProperties pus012MonitoringCheckPropertiesExpected = 13;
  optional pusGroundModel.protobuf.PusElement pusElement = 14;
}
